#
# SPDX-License-Identifier: GPL-2.0-with-classpath-exception
#
# Makefile.am
#
# Copyright (c) 2023 Cisco Systems, Inc. and/or its affiliates
# All rights reserved.
#


noinst_LTLIBRARIES = libcompat.la
libcompat_la_SOURCES = groupaccess.c groupaccess.h match.c match.h
libcompat_la_LIBADD = @LTLIBOBJS@

