#
# SPDX-License-Identifier: GPL-2.0-with-classpath-exception
#
# Makefile.am
#
# Copyright (c) 2023 Cisco Systems, Inc. and/or its affiliates
# All rights reserved.
#

docdir = $(datadir)/doc/@PACKAGE@/duo_unix_support
doc_DATA = README.md

sbin_SCRIPTS = duo_unix_support.sh
EXTRA_DIST = duo_unix_support.sh README.md
