# DUO EDIT
# This file was added to Unity as it connects Unity to the Duo Unix build
# process

AM_CPPFLAGS = -IUnity/src

check_LTLIBRARIES = libunity.la

libunity_la_SOURCES = src/unity.c src/unity.h src/unity_internals.h

libunity_la_includedir = $(includedir)
libunity_la_include_HEADERS = src/unity.h
